--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
   Personal blog
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://blog.thegui.eu/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "1110sillabo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: endecasillabo
 github_username: 1110sillabo
 
