--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: thegui.eu
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Personal blog
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "1110sillabo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "1110sillabo.github.io" #"http://blog.thegui.eu/" #"1110sillabo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: endecasillabo
 github_username: 1110sillabo
 google_analytics: G-KY6L1XEZJ5
